# Rust-HTTP-Request

./: Cargo.toml  readme.md
example/: Cargo.toml
example/src/: main.rs
global_type/: Cargo.toml
global_type/src/type/: type.rs
request/: Cargo.toml
request/src/: cfg.rs  lib.rs  mod.rs  request.rs  type.rs
request/src/cfg/: cfg.rs
request/src/constant/: constant.rs
request/src/error/: error.rs
request/src/methods/: methods.rs
request/src/protocol/: protocol.rs
request/src/request/: mod.rs  request.rs  type.rs
request/src/type/: type.rs
request_url/: Cargo.toml
request_url/src/: lib.rs  mod.rs  type.rs
request_url/src/error/: error.rs
request_url/src/url/: url.rs
response/: Cargo.toml
response/src/: lib.rs  mod.rs  response.rs
response/src/response/: response.rs
response/src/status_code/: status_code.rs
response/src/type/: type.rs
sh/: init.sh  test.sh
src/: lib.rs
src/request/: error.rs  request.rs  type.rs
src/response/: status_code.rs
src/url/: mod.rs  type.rs  url.rs
utils/: Cargo.toml
