[package]
name = "http-request"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "request",
    "response",
    "request_url",
    "global_type",
    "utils",
]

[workspace.dependencies]
url = "2.5.2"
request = { path = "./request" }
response = { path = "./response" }
request_url = { path = "./request_url" }
utils = {path = "./utils" }
global_type = {path = "./global_type" }

[lib]
path = "./src/lib.rs"